--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ __pycache__/
 # Archivos de sistema
 .DS_Store
 
+# Archivos no relevantes
 *.png
 *.keras
 *.h5
+
+2.4.\ alice_bob_eve\ (cifrados)/
+2.5.\ alice_bob_eve\ (texto\ plano)/
+2.6.\ alice_bob_mallory\ (clave)/
