--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,12 @@ __pycache__/
 *.png
 *.keras
 *.h5
+*.txt
 
+2.3.\ alice_bob_eve\ (alfa\ =\ 0)
 2.4.\ alice_bob_eve\ (cifrados)/
 2.5.\ alice_bob_eve\ (texto\ plano)/
 2.6.\ alice_bob_mallory\ (clave)/
+
+and_or_xor.py
+graphs.py
