--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@ __pycache__/
 *.h5
 *.txt
 
+# Excepción: La carpeta de resultados
+!imagenes/
+!imagenes/**/
+!imagenes/**/*.png
+!imagenes/**/*.txt
+
 2.4.\ alice_bob_eve\ (cifrados)/
 2.5.\ alice_bob_eve\ (texto\ plano)/
 2.6.\ alice_bob_mallory\ (clave)/
