--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ __pycache__/
 2.4.\ alice_bob_eve\ (cifrados)/
 2.5.\ alice_bob_eve\ (texto\ plano)/
 2.6.\ alice_bob_mallory\ (clave)/
-jupyter
+jupyter/.ipynb_checkpoints/
 
 and_or_xor.py
 graphs.py
